# cpp-code-coverage

./: CMakeLists.txt  LICENSE  Makefile  README.rst
lib/: googletest
src/: lib1.cpp  lib1.hpp
test/: lib1_test.cpp
